<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"/>
    <item
        android:id="@+id/action_rating"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/rating"/>
    <item
        android:id="@+id/action_news"
        android:icon="@drawable/ic_baseline_textsms_24"
        android:title="@string/news"/>
    <item
        android:id="@+id/action_my_watcha"
        android:icon="@drawable/ic_sharp_person_24"
        android:title="@string/my_watcha"/>
</menu>