<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin">

    <TextView
        android:id="@+id/homeFooterLayout_titleTextView"
        style="@style/BoldTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big_half"
        android:text="@string/watcha_pedia_collection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/homeFooterLayout_moreImageView"
        style="@style/ImageView"
        app:layout_constraintBottom_toBottomOf="@+id/homeFooterLayout_titleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/homeFooterLayout_titleTextView"
        app:srcCompat="@drawable/vector_next"
        android:contentDescription="@string/open" />

    <TextView
        android:id="@+id/homeFooterLayout_menu1"
        style="@style/DescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/academy_filming_award_winner"
        app:layout_constraintStart_toStartOf="@+id/homeFooterLayout_titleTextView"
        app:layout_constraintTop_toBottomOf="@+id/homeFooterLayout_titleTextView" />

    <View
        android:id="@+id/homeFooterLayout_bar1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:layout_marginTop="@dimen/margin"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@+id/homeFooterLayout_menu1" />

    <TextView
        android:id="@+id/homeFooterLayout_menu2"
        style="@style/DescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big_half"
        android:text="@string/academy_work_award_winner"
        app:layout_constraintStart_toStartOf="@+id/homeFooterLayout_menu1"
        app:layout_constraintTop_toBottomOf="@+id/homeFooterLayout_bar1" />

    <View
        android:id="@+id/homeFooterLayout_bar2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:layout_marginTop="@dimen/margin_big_half"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@+id/homeFooterLayout_menu2" />

    <TextView
        android:id="@+id/homeFooterLayout_menu3"
        style="@style/DescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big_half"
        android:text="@string/academy_screenplay_award_winner"
        app:layout_constraintStart_toStartOf="@+id/homeFooterLayout_menu2"
        app:layout_constraintTop_toBottomOf="@+id/homeFooterLayout_bar2" />

    <View
        android:id="@+id/homeFooterLayout_bar3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:layout_marginTop="@dimen/margin_big_half"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@+id/homeFooterLayout_menu3" />

    <TextView
        android:id="@+id/homeFooterLayout_seeMoreTextView"
        style="@style/BoldTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/are_you_considering_what_to_see"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeFooterLayout_bar3" />

    <Button
        android:id="@+id/homeFooterLayout_moreRecommendationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/red"
        android:text="@string/get_more_recommendations"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeFooterLayout_seeMoreTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>