<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".view.MyWatchaFragment">

    <ImageView
        android:id="@+id/profileLayout_circle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="@dimen/margin"
        android:src="@drawable/shape_oval"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/profileLayout_profileImage"
        style="@style/BigImageView"
        android:contentDescription="@string/profile"
        android:src="@drawable/vector_user"
        app:layout_constraintBottom_toBottomOf="@+id/profileLayout_circle"
        app:layout_constraintEnd_toEndOf="@+id/profileLayout_circle"
        app:layout_constraintStart_toStartOf="@+id/profileLayout_circle"
        app:layout_constraintTop_toTopOf="@+id/profileLayout_circle" />

    <TextView
        android:id="@+id/profileLayout_name"
        style="@style/BoldTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/sample_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileLayout_circle" />

    <TextView
        android:id="@+id/profileLayout_followerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/follower"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileLayout_name" />

    <TextView
        android:id="@+id/profileLayout_followerCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/sample_number"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/profileLayout_followerText"
        app:layout_constraintStart_toEndOf="@+id/profileLayout_followerText"
        app:layout_constraintTop_toTopOf="@+id/profileLayout_followerText" />

    <View
        android:id="@+id/profileLayout_divider1"
        style="@style/Divider"
        android:layout_width="@dimen/divider_size"
        android:layout_height="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        app:layout_constraintBottom_toBottomOf="@+id/profileLayout_followerCount"
        app:layout_constraintStart_toEndOf="@+id/profileLayout_followerCount"
        app:layout_constraintTop_toTopOf="@+id/profileLayout_followerCount" />

    <TextView
        android:id="@+id/profileLayout_followingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/following"
        app:layout_constraintBottom_toBottomOf="@+id/profileLayout_divider1"
        app:layout_constraintStart_toEndOf="@+id/profileLayout_divider1"
        app:layout_constraintTop_toTopOf="@+id/profileLayout_divider1"
        tools:layout_editor_absoluteX="156dp" />

    <TextView
        android:id="@+id/profileLayout_followingCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/sample_number"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/profileLayout_followingText"
        app:layout_constraintStart_toEndOf="@+id/profileLayout_followingText"
        app:layout_constraintTop_toTopOf="@+id/profileLayout_followingText" />

    <Button
        android:id="@+id/profileLayout_editProfileButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:backgroundTint="@color/white"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileLayout_followerText" />

    <View
        android:id="@+id/profileLayout_divider2"
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@+id/profileLayout_editProfileButton" />


    <View
        android:id="@+id/profileLayout_divider3"
        style="@style/Divider"
        android:layout_width="@dimen/divider_size"
        android:layout_height="30dp"
        android:layout_marginVertical="@dimen/margin_big"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profileLayout_divider4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileLayout_divider2" />

    <TextView
        android:id="@+id/profileLayout_evaluationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/evaluate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/profileLayout_evaluationCount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/profileLayout_evaluationCount"
        app:layout_constraintTop_toBottomOf="@+id/profileLayout_evaluationCount" />

    <TextView
        android:id="@+id/profileLayout_evaluationCount"
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_number"
        app:layout_constraintBottom_toTopOf="@+id/profileLayout_evaluationText"
        app:layout_constraintEnd_toStartOf="@+id/profileLayout_divider3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileLayout_editProfileButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/profileLayout_commentCount"
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_number"
        app:layout_constraintBottom_toTopOf="@+id/profileLayout_commentText"
        app:layout_constraintEnd_toStartOf="@+id/profileLayout_divider4"
        app:layout_constraintStart_toEndOf="@+id/profileLayout_divider3"
        app:layout_constraintTop_toBottomOf="@+id/profileLayout_editProfileButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/profileLayout_commentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/profileLayout_commentCount"
        app:layout_constraintStart_toStartOf="@+id/profileLayout_commentCount"
        app:layout_constraintTop_toBottomOf="@+id/profileLayout_commentCount" />

    <View
        android:id="@+id/profileLayout_divider4"
        style="@style/Divider"
        android:layout_width="@dimen/divider_size"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/profileLayout_divider3"
        app:layout_constraintTop_toBottomOf="@+id/profileLayout_divider2" />

    <TextView
        android:id="@+id/profileLayout_collectionCount"
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_number"
        app:layout_constraintBottom_toTopOf="@+id/profileLayout_collectionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileLayout_divider4"
        app:layout_constraintTop_toBottomOf="@+id/profileLayout_editProfileButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/profileLayout_collectionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/profileLayout_collectionCount"
        app:layout_constraintStart_toStartOf="@+id/profileLayout_collectionCount"
        app:layout_constraintTop_toBottomOf="@+id/profileLayout_collectionCount" />

</androidx.constraintlayout.widget.ConstraintLayout>